fix grid and spacing

--- a/src/shared/styles/_layout.css
+++ b/src/shared/styles/_layout.css
@@ -17,8 +17,7 @@
   grid-template-columns: 1fr 1fr;
   gap: 30px 10px;
   grid-template-areas:
-    'character-info scar'
-    'character-info weakness'
+    'character-info scar-weakness'
     'skills special-skills'
     'items items'
     'memo memo'
@@ -29,12 +28,11 @@
   grid-area: character-info;
 }
 
-.scar {
-  grid-area: scar;
-}
-
-.weakness {
-  grid-area: weakness;
+.scar-weakness-wrapper {
+  grid-area: scar-weakness;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
 }
 
 .skills {
@@ -310,6 +308,10 @@
       'items'
       'memo'
       'history';
+    gap: 20px;
+  }
+
+  .scar-weakness-wrapper {
     gap: 20px;
   }
 
